Fix spacing of toc items

--- a/src/main/content/_assets/css/toc-multipane.scss
+++ b/src/main/content/_assets/css/toc-multipane.scss
@@ -246,7 +246,8 @@
 #toc_container a {
     display: inline-block;
     color:#5d6a8e;
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 #toc_container a:hover {
